# indian-scalper

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  PROMPT.md  README.md  RUNBOOK.md  TOMORROW.md  bootstrap.py  docker-compose.tailnet.yml  docker-compose.yml  pyproject.toml  ui_preview.html
deploy/: indian-scalper.service
deploy/cloud/: bootstrap.sh  cloud-init.yaml
deploy/cloud-init/: indian-scalper.yaml
deploy/macos/: com.indianscalper.auto-resume.plist  com.indianscalper.service.plist
pine/: README.md  indian-scalper-scorer-short.pine  indian-scalper-scorer.pine
src/: auto_resume.py  backtest_cli.py  live_ltp.py  main.py  network.py  pine_parity.py  preflight.py  replay.py  serve.py  tick_once.py  upstox_auth.py
src/backtest/: __init__.py  driver.py  dry_run.py  fixtures.py  harness.py  historical.py  metrics.py  reporter.py  trades.py
src/brokers/: __init__.py  base.py  paper.py  trade_mode.py  upstox.py
src/config/: __init__.py  logging_config.py  settings.py
src/dashboard/: __init__.py  app.py  auth_routes.py  confirm.py
src/dashboard/templates/: auth_upstox.html  auth_upstox_success.html  base.html  (+7 more)
src/data/: __init__.py  holidays.py  instruments.py  market_data.py  nse_holidays.yaml  options_chain.py  universe.py
src/execution/: __init__.py  order_manager.py  state.py
src/risk/: __init__.py  circuit_breaker.py  options_stops.py  position_sizing.py  stops.py
src/scheduler/: __init__.py  market_hours.py  scan_loop.py
src/strategy/: __init__.py  earnings_calendar.py  indicators.py  regime.py  scoring.py
tests/: test_auth_routes.py  test_auto_resume.py  test_backtest_harness.py  test_backtest_metrics.py  test_backtest_pipeline.py  test_backtest_trades.py  test_circuit_breaker.py  test_config.py  test_confirm_tokens.py  test_dashboard.py  test_earnings_calendar.py  test_holidays.py  test_indicators.py  test_instruments.py  test_live_market_fill.py  test_market_data.py  test_market_hours.py  test_network.py  test_options_chain.py  test_options_stops.py  test_order_manager.py  test_paper_broker.py  test_pine_parity.py  test_position_sizing.py  test_preflight.py  test_regime.py  test_scan_loop.py  test_scoring.py  test_scoring_short.py  test_serve.py  test_signal_snapshots.py  test_sizing_mode.py  test_state.py  test_stops.py  test_symbol_cooldown.py  test_trade_mode.py  test_universe.py  test_upstox_auth.py  test_upstox_broker.py  test_upstox_fetcher.py
tests/fixtures/: __init__.py  sample_equity_master.csv  sample_holidays.yaml  synthetic.py
(+15 files in other folders)
