[project]
name = "indian-scalper"
version = "0.1.0"
description = "Indian equity momentum scalper — paper trading first, Upstox live later."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Avinash Singh" }]

dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "pandas-ta>=0.3.14b",
    "apscheduler>=3.10",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "tenacity>=8.2",
    "jinja2>=3.1",
    "yfinance>=0.2.40",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
]

[project.optional-dependencies]
upstox = ["upstox-python-sdk>=2.0.0"]

# Convenience entry points so `uv run scalper` / `uv run scalper-preflight`
# Just Work without PYTHONPATH gymnastics. Equivalent to
# `uv run python -m serve` / `uv run python -m preflight`.
[project.scripts]
scalper = "serve:main"
scalper-preflight = "preflight:main"
scalper-bootstrap = "main:main"
scalper-replay = "replay:main"
scalper-tick = "tick_once:main"
scalper-auto-resume = "auto_resume:main"
scalper-pine-parity = "pine_parity:main"

# src/-layout with hatchling: every sub-package listed below gets
# installed at the top level (sources = ["src"] strips the prefix) so
# `from brokers.paper import PaperBroker` resolves without PYTHONPATH
# being set at invocation time. Top-level script modules
# (serve.py, main.py, preflight.py) come along via ``include``.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]
packages = [
    "src/backtest",
    "src/brokers",
    "src/config",
    "src/dashboard",
    "src/data",
    "src/execution",
    "src/risk",
    "src/scheduler",
    "src/strategy",
]
include = [
    "src/main.py",
    "src/serve.py",
    "src/preflight.py",
    "src/replay.py",
    "src/tick_once.py",
    "src/auto_resume.py",
    "src/network.py",
    "src/pine_parity.py",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
mypy_path = "src"
